js/js.translator/testData/incremental/invalidation/crossModuleReferences/lib2/l2.3.kt
fun qux() = baz(2) + baz("test") + baz(true)
